--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,8 @@
 
 html,
 body {
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     display: flex;
     justify-content: center;
 } 
@@ -20,7 +20,7 @@ body main{
 
     display: grid ;
     grid-template-columns: repeat(6,1fr);
-    grid-template-rows: repeat(6,1fr);
+    grid-template-rows:100px repeat(5,1fr);
     background-color: green;
     grid-template-areas: 
     "header header header header header header"
@@ -42,14 +42,14 @@ body main header{
 
 body main .dashboard{
     grid-area: dashboard;
-
-    background-color:blue;
+/* 
+    background-color:blue; */
 } 
 
 
 body main .activity-logs{
     grid-area: activity-logs;
-    background-color:yellow;
+    /* background-color:yellow; */
 } 
 
 
